# AURA-AI-Chatbot

./: .env  README.md  pyproject.toml
agents_memory/: a_lev_chem.json  o_lev_math.json  o_lev_phy.json
src/aura_prototype/: __init__.py
